src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions.rs
fn foo(x: &mut Vec<&u8>, y: &u8) {
    x.push(y); //~ ERROR lifetime mismatch
}

fn main() { }
